--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -35,6 +35,17 @@
   --timing-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
+.container {
+  width: 100%;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin: 0 auto;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
