--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,7 @@
 */
 @import url('./reset.css');
 @import url('./hero.css');
+@import url('./hero3.css');
 @import url('./hero4.css');
 @import url('./aboutrest.css');
 @import url('./detailsrest.css');
