--- a/src/css/aboutkitchen.css
+++ b/src/css/aboutkitchen.css
@@ -1,1 +1,182 @@
-/* <!-- -------About our kitchen------- --> */
+/* ------- About our kitchen ------- */
+
+.container {
+  /* justify-content: center;
+    margin: 0 auto; */
+}
+.kitchen-section {
+  padding-top: 16px;
+  padding-bottom: 28px;
+  padding-left: 15px;
+  padding-right: 15px;
+  background: #fffdee;
+}
+
+.kitchen-about {
+  width: 190px;
+  margin-bottom: 12px;
+
+  /* font-family: 'Times New Roman';
+  font-style: normal; */
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.15;
+  color: #b4b4b4;
+}
+
+/* м_заголовок3 ----- MIMIHO ----- */
+.restoran-name {
+  /* position: absolute; */
+  width: 127px;
+  /* height: 43px;
+  left: 15px;
+  top: 51px; */
+  margin-bottom: 12px;
+
+  font-family: 'Film P3';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.075;
+  letter-spacing: 0.3em;
+
+  color: #494848;
+}
+
+.interior-descript {
+  width: 258px;
+  margin-bottom: 28px;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+
+  color: #7a7a7a;
+}
+
+.img-interrior {
+  /* justify-content: end; */
+  /* margin-right: auto; */
+  /* margin-left: auto; */
+  padding-left: 155px;
+  margin-bottom: 32px;
+  /* width: 244px; */
+}
+
+.oruri {
+  display: flex;
+  gap: 20px;
+}
+.oruri-descript {
+  width: 163px;
+  margin-top: 70px;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: #c79002;
+}
+
+/* ----- Mobile ----- */
+
+@media screen and (min-width: 320px) and (max-width: 414px) {
+  .container {
+    /* max-width: 328px; */
+    width: 100%;
+  }
+  .kitchen-section {
+    width: 100%;
+  }
+  
+}
+
+@media screen and (min-width: 414px) {
+  .container {
+    width: 414px;
+  }
+  .kitchen-section {
+    width: 100%;
+  }
+
+  .img-interrior {
+    margin-left: 0;
+  }
+}
+
+/* --------- Tablet ----------- */
+@media screen and (min-width: 1024px) {
+  .container {
+    width: 1024px;
+  }
+  .kitchen-section {
+    width: 100%;
+    position: relative;
+  }
+  .kitchen-about {
+    width: 304px;
+    margin-bottom: 4px;
+    font-size: 32px;
+    line-height: 1.16;
+  }
+  .restoran-name {
+    width: 202px;
+    margin-bottom: 24px;
+    font-size: 64px;
+    line-height: 1.08;
+  }
+
+  .interior-descript {
+    width: 439px;
+    margin-bottom: 142px;
+    font-size: 16px;
+    line-height: 1.25;
+  }
+  .img-interrior {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    top: -52px;
+    left: 512px;
+  }
+
+  .oruri-descript {
+    width: 312px;
+    margin-top: 190px;
+    font-size: 16px;
+    line-height: 1.25;
+  }
+}
+
+/* -------- Desctop -------- */
+@media screen and (min-width: 1280px) {
+  .container {
+    width: 1280px;
+  }
+  .kitchen-section {
+    width: 100%;
+  }
+
+  .interior-descript {
+    width: 518px;
+    margin-bottom: 162px;
+    font-size: 16px;
+    line-height: 1.25;
+  }
+  .img-interrior {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    top: -33px;
+    left: 640px;
+  }
+
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+}
