--- a/src/partials/aboutkitchen.html
+++ b/src/partials/aboutkitchen.html
@@ -1,1 +1,106 @@
 <!-- -------About our kitchen------- -->
+<body>
+  <section class="kitchen-section container">
+    <!-- прихований заголовок для краулерів -->
+    <h2 class="visually-hidden">About our kitchen</h2>
+    <p class="kitchen-about">Amet minim mollit non</p>
+
+    <!-- <p class="restoran-name"></p> -->
+    <h3 class="restoran-name">MIMIHO</h3>
+
+    <p class="interior-descript">
+      Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+      Velit officia consequat duis enim velit mollit. Exercitation veniam
+      consequat sunt nostrud amet.
+    </p>
+
+    <div class="img-interrior">
+      <picture>
+        <source
+          srcset="
+            ./img/restaurant-interior-desktop.jpg    1x,
+            ./img/restaurant-interior-desktop-2x.jpg 2x
+          "
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="
+            ./img/restaurant-interior-tablet.jpg    1x,
+            ./img/restaurant-interior-tablet-2x.jpg 2x
+          "
+          media="(min-width: 1024px)"
+        />
+        <source
+          srcset="
+            ./img/restaurant-interior-mobile.jpg    1x,
+            ./img/restaurant-interior-mobile-2x.jpg 2x
+          "
+          media="(min-width: 320px)"
+        />
+        <img
+          src="./img/restaurant-interior-mobile.jpg"
+          alt="restaurant-interior"
+          width=""
+          height=""
+        />
+        <!-- width="460"
+          height="574" -->
+      </picture>
+      <!-- <img
+        src="./img/restaurant-interior-mobile.jpg"
+        alt="restaurant-interior"
+        srcset="
+          ./img/restaurant-interior-mobile.jpg    1x,
+          ./img/restaurant-interior-mobile.jpg-2x 2x
+        "
+        width="244"
+        height="322"
+      /> -->
+    </div>
+
+    <div class="oruri">
+      <picture>
+        <source
+          srcset="
+            ./img/oruri-jacome-desktop.jpg    1x,
+            ./img/oruri-jacome-desktop-2x.jpg 2x
+          "
+          media="(min-width: 1280px)"
+        />
+        <source srcset="
+        ./img/oruri-jacome-tablet.jpg    1x,
+        ./img/oruri-jacome-tablet-2x.jpg 2x
+      "
+      media="(min-width: 1024px)"
+      />
+        <source 
+        srcset="
+            ./img/oruri-jacome-mobile.jpg    1x,
+            ./img/oruri-jacome-mobile-2x.jpg 2x
+          "
+          media="(min-width: 320px)"
+          />
+
+        <img
+          src="./img/oruri-jacome-mobile.jpg"
+          alt="oruri-jacome"
+          srcset="
+            ./img/oruri-jacome-mobile.jpg    1x,
+            ./img/oruri-jacome-mobile.jpg-2x 2x
+          "
+          width=""
+          height=""
+        />
+        <!-- width="200"
+          height="278" -->
+          <!-- width="460"
+          height="574" -->
+      </picture>
+      <p class="oruri-descript">
+        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+        sint. Velit officia consequat duis enim velit mollit. Exercitation
+        veniam consequat sunt nostrud amet.
+      </p>
+    </div>
+  </section>
+</body>
