html markup added

--- a/src/partials/hero4.html
+++ b/src/partials/hero4.html
@@ -1,1 +1,53 @@
 <!-- ---------Room Page Hero--------- -->
+<section class="room-hero">
+  <div class="room-hero-container">
+    <h2 class="room-hero-title">ДВОМІСНИЙ НОМЕР люкс</h2>
+    <p class="room-hero-text">
+      Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+      Velit officia consequat duis enim velit mollit. Exercitation veniam
+      consequat sunt nostrud amet.
+    </p>
+    <address class="room-hero-adress">
+      <svg class="room-hero-adress-icon" width="20px" height="20px">
+        <use href="../img/icons.svg#location"></use>
+      </svg>
+      Україна, м. Полтава, вул. Маршала Бірюзова, 15
+    </address>
+    <ul class="room-hero-soc">
+      <li class="room-hero-soc-item">
+        <a
+          href=""
+          class="room-hero-soc-link"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <svg class="room-hero-soc-icon" width="24px" height="24px">
+            <use href="../img/icons.svg#instagram"></use></svg
+        ></a>
+      </li>
+      <li class="room-hero-soc-item">
+        <a
+          href=""
+          class="room-hero-soc-link"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <svg class="room-hero-soc-icon" width="24px" height="24px">
+            <use href="../img/icons.svg#facebook"></use></svg
+        ></a>
+      </li>
+      <li class="room-hero-soc-item">
+        <a
+          href=""
+          class="room-hero-soc-link"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <svg class="room-hero-soc-icon" width="24px" height="24px">
+            <use href="../img/icons.svg#telegram"></use></svg
+        ></a>
+      </li>
+    </ul>
+    <button type="button" class="room-hero-button">Переглянути ціни</button>
+  </div>
+</section>
