--- a/src/partials/hero4.html
+++ b/src/partials/hero4.html
@@ -1,31 +1,30 @@
 <!-- ---------Room Page Hero--------- -->
 <section class="room-hero">
-  <div class="room-hero-container">
+  <div class="container">
     <h2 class="room-hero-title">ДВОМІСНИЙ НОМЕР люкс</h2>
     <p class="room-hero-text">
       Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
       Velit officia consequat duis enim velit mollit. Exercitation veniam
       consequat sunt nostrud amet.
     </p>
-    <address class="room-hero-address">
-      <svg class="room-hero-address-icon" width="20px" height="20px">
-        <use href="../img/icons.svg#location"></use>
-      </svg>
-      <a
-        href="https://www.google.pl/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B0%D1%80%D1%88%D0%B0%D0%BB%D0%B0+%D0%91%D0%B8%D1%80%D1%8E%D0%B7%D0%BE%D0%B2%D0%B0,+15,+%D0%9F%D0%BE%D0%BB%D1%82%D0%B0%D0%B2%D0%B0,+%D0%9F%D0%BE%D0%BB%D1%82%D0%B0%D0%B2%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+36000/@49.599194,34.5243576,17z/data=!3m1!4b1!4m6!3m5!1s0x40d82601f3347a5f:0x36f3f9aeec44a6a!8m2!3d49.599194!4d34.5265463!16s%2Fg%2F1tggm4y1"
-        class="room-hero-address-link"
-        target="_blank"
-        rel="noopener noreferrer"
-        >Україна, м. Полтава, вул. Маршала Бірюзова, 15</a
-      >
-    </address>
+    <a
+      class="maps-link link"
+      href="https://goo.gl/maps/gUJNV8gQoXNjQtDE9"
+      target="_blank"
+      rel="noopener noreferrer nofollow"
+    >
+      <svg class="location-icon" width="24" height="24">
+        <use href="../img/icons.svg#location"></use></svg
+      >Україна, м. Полтава,<br />
+      вул. Маршала Бірюзова, 15</a
+    >
     <ul class="room-hero-soc">
       <li class="room-hero-soc-item">
         <a
           href=""
           class="room-hero-soc-link"
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener noreferrer nofollow"
         >
           <svg class="room-hero-soc-icon" width="24px" height="24px">
             <use href="../img/icons.svg#instagram"></use></svg
@@ -36,7 +35,7 @@
           href=""
           class="room-hero-soc-link"
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener noreferrer nofollow"
         >
           <svg class="room-hero-soc-icon" width="24px" height="24px">
             <use href="../img/icons.svg#facebook"></use></svg
@@ -47,7 +46,7 @@
           href=""
           class="room-hero-soc-link"
           target="_blank"
-          rel="noopener noreferrer"
+          rel="noopener noreferrer nofollow"
         >
           <svg class="room-hero-soc-icon" width="24px" height="24px">
             <use href="../img/icons.svg#telegram"></use></svg
