--- a/src/partials/hero4.html
+++ b/src/partials/hero4.html
@@ -7,17 +7,19 @@
       Velit officia consequat duis enim velit mollit. Exercitation veniam
       consequat sunt nostrud amet.
     </p>
-    <a
-      class="maps-link link"
-      href="https://goo.gl/maps/gUJNV8gQoXNjQtDE9"
-      target="_blank"
-      rel="noopener noreferrer nofollow"
-    >
-      <svg class="location-icon" width="24" height="24">
-        <use href="../img/icons.svg#location"></use></svg
-      >Україна, м. Полтава,<br />
-      вул. Маршала Бірюзова, 15</a
-    >
+    <address class="room-hero-address">
+      <a
+        class="maps-link link"
+        href="https://goo.gl/maps/gUJNV8gQoXNjQtDE9"
+        target="_blank"
+        rel="noopener noreferrer nofollow"
+      >
+        <svg class="location-icon" width="24" height="24">
+          <use href="../img/icons.svg#location"></use></svg
+        >Україна, м. Полтава,<br />
+        вул. Маршала Бірюзова, 15</a
+      >
+    </address>
     <ul class="room-hero-soc">
       <li class="room-hero-soc-item">
         <a
