html markup added
Except images and rows

--- a/src/partials/detailsrest.html
+++ b/src/partials/detailsrest.html
@@ -1,1 +1,13 @@
 <!-- ---------Details of our restaurant--------- -->
+<section class="rest-details">
+  <div class="container">
+    <p class="rest-details-uppertext">MIMIHO</p>
+    <h2 class="rest-details-title">Ресторан</h2>
+    <p class="rest-details-lowertext">
+      Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+      Velit officia consequat duis enim velit mollit.
+    </p>
+    <button type="button" class="book-table">Забронювати столик</button>
+    <a class="check-menu" href="../restaurant.html"> Переглянути меню </a>
+  </div>
+</section>
