--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1,1 +1,243 @@
-/* <!-- ---------- Modal ---------- --> */
+.book-room-modal {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(96, 91, 91, 0.4);
+  transition: opacity var(--timing-function), visibility var(--timing-function);
+}
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+.select-wrap {
+  position: relative;
+}
+.select-wrap::after {
+  content: ' ';
+  display: block;
+  width: 24px;
+  height: 24px;
+
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  transform: translateY(-50%);
+  background-image: url('../img/arrow-down-bold.svg');
+}
+
+.modal-container {
+  width: 100vw;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  padding: 0 15px;
+
+  margin: auto;
+  background-color: #fffdee;
+  overflow: auto;
+}
+
+.modal-close {
+  width: 24px;
+  height: 24px;
+  padding: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: transparent;
+  border: none;
+  margin: 16px 1px 20px auto;
+}
+.modal-close-icon {
+  stroke: #000000;
+}
+
+.modal-title {
+  font-family: 'Times New Roman', sans-serif;
+
+  font-weight: 700;
+  font-size: 24px;
+  line-height: calc(28 / 24);
+  letter-spacing: 0.05em;
+  color: #000000;
+  text-align: center;
+
+  margin-bottom: 40px;
+}
+
+.book-room-user-contacts {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: auto;
+  margin-bottom: 20px;
+}
+
+.book-room-user-contacts .modal-input:first-child {
+  border-radius: 2px;
+}
+
+.book-room-dates {
+  display: flex;
+  flex-direction: column;
+  gap: 17px;
+  margin-bottom: 40px;
+}
+
+.room-type {
+  margin-bottom: 20px;
+}
+
+.modal-input {
+  width: 100%;
+  height: 54px;
+  background-color: transparent;
+  border: 1px solid var(--primary-gold-color);
+
+  padding: 0;
+  padding-left: 12px;
+
+  font-family: 'Times New Roman', sans-serif;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: calc(23 / 20);
+  letter-spacing: 0.05em;
+  color: #808080;
+}
+
+.modal-input-label {
+  display: block;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: calc(17 / 14);
+
+  letter-spacing: 0.02em;
+  color: var(--primary-gold-color);
+  margin-top: 8px;
+  margin-left: 12px;
+}
+
+.modal-btn {
+  width: 100%;
+  min-height: 64px;
+  text-align: center;
+  padding: 0;
+
+  background-color: #000000;
+
+  border: 1px solid #f3c653;
+  border-radius: 2px;
+
+  font-weight: 500;
+  font-size: 20px;
+  line-height: calc(24 / 20);
+
+  color: var(--primary-white-color);
+
+  transition: color var(--timing-function),
+    background-color var(--timing-function), border-color var(--timing-function);
+}
+
+/* .modal-btn:active */
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: #f3c653;
+  color: #000000;
+  border-color: #f3c653;
+}
+
+@media screen and (min-width: 414px) {
+  .modal-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform var(--timing-function);
+  }
+  .modal-container.book-room {
+    width: 414px;
+    height: 780px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .modal-container.book-room {
+    width: 712px;
+    height: 638px;
+    padding: 60px;
+  }
+
+  .modal-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 16px;
+  }
+
+  .modal-title {
+    font-size: 40px;
+    line-height: calc(46 / 40);
+    margin-bottom: 40px;
+  }
+
+  .book-room-modal .modal-title {
+    margin-bottom: 36px;
+  }
+
+  .book-room-user-contacts {
+    flex-direction: row;
+    flex-wrap: nowrap;
+
+    gap: 16px;
+    margin: auto;
+    margin-bottom: 28px;
+  }
+
+  .modal-input-label {
+    font-size: 16px;
+    line-height: calc(20 / 16);
+  }
+
+  .room-type {
+    width: 288px;
+    margin-left: auto;
+    margin-bottom: 28px;
+  }
+
+  .book-room-dates {
+    flex-direction: row;
+    flex-wrap: nowrap;
+
+    gap: 16px;
+    margin: auto;
+    margin-bottom: 40px;
+  }
+
+  .book-room-user-contacts > .modal-field {
+    width: calc((100%-16px) / 2);
+  }
+
+  .book-room-dates > .modal-field {
+    width: calc((100%-16px) / 2);
+  }
+
+  .modal-input {
+    height: 64px;
+
+    font-size: 24px;
+    line-height: calc(28 / 24);
+  }
+
+  .modal-btn {
+    font-size: 24px;
+  }
+}
