--- a/src/partials/modalroom.html
+++ b/src/partials/modalroom.html
@@ -1,6 +1,6 @@
 <!-- ---------Book Room Modal window--------- -->
 
-<section class="book-room-modal ">
+<section class="book-room-modal is-hidden">
   <div class="modal-container book-room">
     <button
       type="button"
