--- a/src/css/luxe.css
+++ b/src/css/luxe.css
@@ -1,1 +1,267 @@
 /* <!-- ----------1 room luxe for 2 adult---------- --> */
+.luxe {
+  background-color: #fffdee;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.luxe .container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+.luxe-pre-title {
+  font-family: 'Times New Roman';
+  font-style: normal;
+  font-size: 20px;
+  line-height: 1.15;
+  color: #b4b4b4;
+
+  margin-bottom: 8px;
+}
+
+.luxe-logo {
+  font-family: 'Film P3', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.08;
+  letter-spacing: 0.3em;
+  color: #494848;
+
+  margin-bottom: 32px;
+}
+
+.luxe-title {
+  font-family: 'Times New Roman';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+  color: #000000;
+
+  margin-bottom: 12px;
+}
+
+.luxe-text {
+  max-width: 241px;
+
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+
+  margin-bottom: 32px;
+}
+
+.luxe-img {
+  max-width: 244px;
+  max-height: 322px;
+  background-color: #dadada;
+  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
+  margin-left: auto;
+  overflow: hidden;
+  margin-bottom: 32px;
+}
+
+.luxe-slaider-list {
+  display: flex;
+  gap: 16px;
+  margin-left: -15px;
+  margin-bottom: 20px;
+}
+.luxe-slaider-item {
+  background-color: #dadada;
+  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
+  overflow: hidden;
+}
+.luxe-arrow {
+  margin-bottom: 20px;
+}
+.luxe-arrow-btn {
+  border: none;
+  background-color: transparent;
+  width: 32px;
+  height: 32px;
+  padding: 0;
+  margin-right: 32px;
+}
+.luxe-arrow-btn:last-child {
+  margin-right: 0;
+}
+
+.luxe-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 16px;
+  width: 236px;
+  height: 48px;
+  background-color: #000000;
+  border: 2px solid #fffdee;
+  border-radius: 25px;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: #f3c653;
+  transition: background-color var(--timing-function) , border-color var(--timing-function);
+}
+.luxe-btn:last-child {
+  margin-bottom: 0;
+}
+.luxe-btn:hover,
+.luxe-btn:focus {
+  background-color: #ffffff;
+  border-color: #f3c653;
+}
+
+@media screen and (min-width: 414px) {
+  .luxe .container {
+    width: 414px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .luxe {
+    padding-top: 62px;
+    padding-bottom: 40px;
+  }
+  .luxe .container {
+    position: relative;
+    width: 1024px;
+    padding-left: 47px;
+    padding-right: 47px;
+  }
+  .luxe-pre-title {
+    font-size: 32px;
+    margin-bottom: 4px;
+  }
+
+  .luxe-logo {
+    font-size: 64px;
+    margin-bottom: 62px;
+  }
+
+  .luxe-title {
+    font-size: 30px;
+    line-height: 1.13;
+
+    margin-bottom: 16px;
+  }
+
+  .luxe-text {
+    max-width: 419px;
+
+    font-size: 16px;
+
+    margin-bottom: 176px;
+  }
+
+  .luxe-img {
+    position: absolute;
+    top: -94px;
+    left: 512px;
+
+    max-width: 400px;
+    max-height: 528px;
+
+    box-shadow: 5px 5px 70px 17px rgba(0, 0, 0, 0.25);
+    border-radius: 0;
+  }
+
+  .luxe-slaider-list {
+    display: flex;
+    gap: 40px;
+    margin-left: 0;
+    margin-bottom: 32px;
+  }
+  .luxe-slaider-item {
+    border-radius: 0;
+  }
+  .luxe-arrow {
+    margin-bottom: 20px;
+  }
+  .luxe-arrow-btn {
+    margin-left: 330px;
+  }
+  .luxe-arrow-btn:last-child {
+    margin-left: 0;
+  }
+
+  .luxe-wrap {
+    position: absolute;
+    right: 47px;
+    bottom: 105px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .luxe {
+    padding-top: 72px;
+  }
+  .container {
+    position: relative;
+    width: 1280px;
+    padding-left: 85px;
+    padding-right: 85px;
+  }
+
+  .luxe-logo {
+    margin-bottom: 72px;
+  }
+
+  .luxe-title {
+    font-size: 36px;
+
+    margin-bottom: 24px;
+  }
+
+  .luxe-text {
+     max-width: 400px;
+    margin-bottom: 188px;
+  }
+
+  .luxe-img {
+    position: absolute;
+    top: -105px;
+    left: 640px;
+
+    max-width: 460px;
+    max-height: 574px;
+
+    border-radius: 2px;
+  }
+
+  .luxe-slaider-list {
+    display: flex;
+    gap: 40px;
+    margin-left: 0;
+    margin-bottom: 40px;
+  }
+  .luxe-slaider-item {
+    border-radius: 0;
+  }
+  .luxe-arrow {
+    margin-bottom: 20px;
+  }
+  .luxe-arrow-btn {
+    margin-left: 457px;
+  }
+
+  .luxe-wrap {
+    position: absolute;
+    right: 85px;
+    bottom: 142px;
+  }
+}
