--- a/src/partials/luxe.html
+++ b/src/partials/luxe.html
@@ -96,6 +96,7 @@
       <svg width="32" height="32">
         <use href="../img/icons.svg#arrow-left"></use>
       </svg>
+         </button>
 
          <button type="button" class="luxe-arrow-btn">
       <svg width="32" height="32">
