--- a/src/partials/modalroom.html
+++ b/src/partials/modalroom.html
@@ -86,15 +86,15 @@
           <div class="select-wrap">
             <select
               class="modal-input"
-              name="book-room-date-depart "
-              id="book-room-date-depart "
+              name="book-room-date-depart"
+              id="book-room-date-depart"
             >
               <option value="today">Сьогодні</option>
               <option value="tomorrow">Завтра</option>
               <option value="day-after-tomorrow">Післязавтра</option>
             </select>
           </div>
-          <label for="book-room-date-depart " class="modal-input-label"
+          <label for="book-room-date-depart" class="modal-input-label"
             >Дата виїзду</label
           >
         </div>
@@ -105,5 +105,5 @@
         </button>
       </div>
     </form>
-  </di >
+  </div>
 </section>
