--- a/src/css/aboutrest.css
+++ b/src/css/aboutrest.css
@@ -1,1 +1,183 @@
 /* <!-- -------About our restaurant------- --> */
+.about-rest {
+    padding-top: 16px;
+    padding-bottom: 20px;
+    background: #fffdee;
+    position: relative;
+}
+img {
+    background: #DADADA;
+    box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 2px;
+}
+.about-pre-title {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 1.15;
+    color: #B4B4B4;
+    margin-bottom: 12px;
+}
+.about-title {
+    font-family: 'Film P3';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 1.07;
+    letter-spacing: 0.3em;
+    color: #494848;
+    margin-bottom: 12px;
+}
+.about-after-title {
+    width: 258px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.25;
+    letter-spacing: 0.02em;
+    color: #7A7A7A;
+    margin-bottom: 28px;
+}
+.about-restaurant {
+    margin-bottom: 32px;
+}
+.img {
+ padding-left: 155px;
+ margin-bottom: 32px;
+
+}
+.about-pexels {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 32px;   
+}
+.about-text {
+    max-width: 163px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 1.25;
+    letter-spacing: 0.02em;
+    color: #C79002;
+    margin-top: 70px;
+}
+
+.about-img {
+    display: flex;
+    gap: 25px;
+    margin-left: 82px ;
+     width: 515px;
+     margin-bottom: 20px;
+}
+.about-arrow {
+    display: flex ;
+    width: 98px;
+    gap: 32px;
+    margin-left: 301px;
+}
+.about-icon:hover {
+fill: #F3C653;
+}
+/* ------- Mob ------- */
+
+@media screen and (min-width: 320px) and (max-width: 413px) {
+  /* .about-rest {
+    width: 100%;
+  } */
+  
+}
+
+@media screen and (min-width: 414px) {
+  .container {
+    width: 414px;
+  }
+  .img {
+    margin-left: 0;
+  }
+}
+
+/* ------- Tab --------- */
+@media screen and (min-width: 1024px) {
+  .about-rest {
+    padding-bottom: 32px;
+  }
+  .container {
+    width: 1024px;
+  }
+  .about-pre-title {
+    margin-bottom: 4px;
+    font-size: 32px;
+    line-height: 1.16;
+  }
+  .about-title {
+    margin-bottom: 24px;
+    font-size: 64px;
+    line-height: 1.08;
+  }
+
+  .about-after-title {
+    width: 439px;
+    margin-right: 26px;
+    margin-bottom: 142px;
+    font-size: 16px;
+    line-height: 1.25;
+  }
+  .about-pexels {
+    padding-left: 47px;
+    gap: 48px;
+  }
+  .img {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    top: -32px;
+    left: 512px;
+  }
+
+  .about-text {
+   max-width: 312px;
+    margin-top: 190px;
+    font-size: 16px;
+    line-height: 1.25;
+  }
+  .about-img {
+    width: 428px;
+    margin: 0;
+    margin-left: 536px;
+     margin-bottom: 32px;
+  }
+  .about-arrow {
+    margin-left: 866px;
+  }
+}
+
+/* ----- Desc ------*/
+@media screen and (min-width: 1280px) {
+  .about-rest {
+    padding-bottom: 50px;
+  }
+  .container {
+    width: 1280px;
+  }
+  .about-after-title {
+    width: 518px;
+    margin-right: 37px;
+    margin-bottom: 162px;
+  }
+   .about-text {
+    margin-bottom: 119px;
+  }
+  .about-pexels {
+    padding-left: 85px;
+    gap: 32px;
+  }
+  .img {
+    top: -83px;
+    left: 640px;
+  }
+.about-img {
+  width: 548px;
+  margin-left: 647px;
+   margin-bottom: 36px;
+}
+.about-arrow {
+   margin-left: 1097px;
+  }
+}
