--- a/src/partials/aboutrest.html
+++ b/src/partials/aboutrest.html
@@ -9,7 +9,7 @@
             Velit officia consequat duis enim velit
             mollit. Exercitation veniam consequat sunt nostrud amet.</p>
         <div class="img">
-            <picture>
+            <picture class="border">
                 <source srcset="
                                 ../img/aboutrest/restaurant-interior-desc.jpg   1x,
                                 ../img/aboutrest/restaurant-interior-desc-2x.jpg 2x
@@ -28,7 +28,7 @@
 
         </div>
         <div class="about-pexels">
-            <picture>
+            <picture class="border">
                 <source srcset="
                         ../img/aboutrest/pexels-oruri-jacome-desc.jpg    1x,
                         ../img/aboutrest/pexels-oruri-jacome-desc-2x.jpg 2x
@@ -51,7 +51,7 @@
                 mollit. Exercitation veniam consequat sunt nostrud amet.</p>
         </div>
         <div class="about-img">
-            <picture>
+            <picture class="border">
                 <source srcset="
                                     ../img/aboutrest/pexels-helena-lopes-desc.jpg    1x,
                                     ../img/aboutrest/pexels-helena-lopes-desc-2x.jpg 2x
@@ -68,7 +68,7 @@
                 <img src="../img/aboutrest/pexels-helena-lopes-mob.jpg" alt="pexels-helena-lopes" width="254"
                     height="254">
             </picture>
-            <picture>
+            <picture class="border">
                 <source srcset="
                                                 ../img/aboutrest/pexels-mat-brown-desc.jpg    1x,
                                                 ../img/aboutrest/pexels-mat-brown-desc-2x.jpg 2x
