--- a/src/css/aboutrest.css
+++ b/src/css/aboutrest.css
@@ -5,7 +5,7 @@
     background: #fffdee;
     position: relative;
 }
-img {
+.border {
     background: #DADADA;
     box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
     border-radius: 2px;
