--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,1 +1,62 @@
 <!-- ---------Contacts--------- -->
+
+<section class="main-contacts">
+  <div class="main-contacts-container">
+    <h3 class="visually-hidden">Контакти закладу</h3>
+    <p class="main-contacts-name">MIMIHO</p>
+    <p class="main-contacts-organization">Ресторанно-готельний комплекс</p>
+    <address class="main-contacts-adress">
+      <ul class="main-contacts-list">
+        <li class="main-contacts-item">
+          <p class="main-contacts-text">Ресторан</p>
+          <a href="tel:+380955559533" class="main-contacts-tel contacts-tel1">
+            <svg class="main-contacts-tel-svg" width="24px" height="24px">
+              <use href="../img/icons.svg#phone"></use>
+            </svg>
+            095 555 95 33</a
+          >
+        </li>
+        <li class="main-contacts-item">
+          <p class="main-contacts-text">Готель</p>
+          <div class="main-contacts-call">
+            <a href="tel:+380668491089" class="main-contacts-tel contacts-tel2">
+              <svg class="main-contacts-tel-svg" width="24px" height="24px">
+                <use href="../img/icons.svg#phone"></use>
+              </svg>
+              066 849 10 89</a
+            >
+            <a href="tel:+380672758540" class="main-contacts-tel contacts-tel3"
+              >067 275 85 40</a
+            >
+          </div>
+        </li>
+        <li class="main-contacts-item">
+          <a
+            href="https://goo.gl/maps/bpqEs5y7d783FtzF8"
+            target="_blank"
+            rel="noopener noreferrer nofollow"
+            class="main-contacts-place"
+          >
+            <svg class="main-contacts-place-svg" width="24px" height="24px">
+              <use href="../img/icons.svg#location"></use>
+            </svg>
+            Україна, м. Полтава,<br />вул. Маршала Бірюзова, 15</a
+          >
+        </li>
+      </ul>
+      <div class="main-contacts-map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2585.919871665358!2d34.52380055024658!3d49.599260479265716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d82601f34ac947%3A0xbb948724f7cf0b61!2z0JPQvtGC0LXQu9G0L3Qvi3RgNC10YHRgtC-0YDQsNC90L3QuNC5INC60L7QvNC_0LvQtdC60YEgItCc0ZbQvNGW0L3QviI!5e0!3m2!1sru!2scz!4v1676474467965!5m2!1sru!2scz"
+          class="main-contacts-google-map"
+          width="100%"
+          height="220px"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+          target="_blank"
+          rel="noopener noreferrer nofollow"
+        ></iframe>
+      </div>
+    </address>
+  </div>
+</section>
