--- a/src/css/room1.css
+++ b/src/css/room1.css
@@ -1,1 +1,277 @@
 /* <!-- -----------1 room for 3 adult----------- --> */
+.room1 {
+  background-color: #F0ECD6;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.room1 .container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  text-align: right;
+}
+.room1-pre-title {
+  font-family: 'Times New Roman';
+  font-style: normal;
+  font-size: 20px;
+  line-height: 1.15;
+  color: #b4b4b4;
+
+  margin-bottom: 8px;
+}
+
+.room1-logo {
+  font-family: 'Film P3', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.08;
+  letter-spacing: 0.3em;
+  color: #494848;
+
+  margin-bottom: 32px;
+}
+
+.room1-title {
+  font-family: 'Times New Roman';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+  color: #000000;
+
+  margin-bottom: 12px;
+}
+
+.room1-text {
+  max-width: 241px;
+
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+text-align: left;
+
+    margin-left: 83px;
+  margin-bottom: 32px;
+}
+
+.room1-img {
+  max-width: 244px;
+  max-height: 322px;
+  background-color: #dadada;
+  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
+  margin-right: auto;
+  overflow: hidden;
+  margin-bottom: 32px;
+}
+
+.room1-slaider-list {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 16px;
+  margin-right: -15px;
+  margin-bottom: 20px;
+}
+.room1-slaider-item {
+    width: 194;
+  background-color: #dadada;
+  box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
+  overflow: hidden;
+}
+.room1-arrow {
+  margin-bottom: 20px;
+}
+.room1-arrow-btn {
+  border: none;
+  background-color: transparent;
+  width: 32px;
+  height: 32px;
+  padding: 0;
+  margin-right: 32px;
+}
+.room1-arrow-btn:last-child {
+  margin-right: 0;
+}
+
+.room1-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 16px;
+  width: 236px;
+  height: 48px;
+  background-color: #000000;
+  border: 2px solid #fffdee;
+  border-radius: 25px;
+
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: var(--second-gold-color);
+  transition: background-color var(--timing-function) , border-color var(--timing-function);
+}
+.room1-btn:last-child {
+  margin-bottom: 0;
+}
+.room1-btn:hover,
+.room1-btn:focus {
+  background-color: var(--primary-white-color);
+  border-color: var(--second-gold-color);
+}
+
+@media screen and (min-width: 414px) {
+  .room1 .container {
+    width: 414px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .room1 {
+    padding-top: 62px;
+    padding-bottom: 40px;
+  }
+  .room1 .container {
+    position: relative;
+    width: 1024px;
+    padding-left: 47px;
+    padding-right: 47px;
+  }
+  .room1-pre-title {
+    font-size: 32px;
+    margin-bottom: 4px;
+  }
+
+  .room1-logo {
+    font-size: 64px;
+    margin-bottom: 62px;
+    margin-right: -18px;
+  }
+
+  .room1-title {
+    font-size: 30px;
+    line-height: 1.13;
+    text-align: left;
+
+margin-left: 510px;
+    margin-bottom: 16px;
+  }
+
+  .room1-text {
+    max-width: 374px;
+  font-weight: 700;
+    font-size: 16px;
+
+margin-left: 510px;
+    margin-bottom: 176px;
+  }
+
+  .room1-img {
+    position: absolute;
+    top: -94px;
+    left: 112px;
+
+    max-width: 400px;
+    max-height: 528px;
+
+    box-shadow: 5px 5px 70px 17px rgba(0, 0, 0, 0.25);
+    border-radius: 0;
+  }
+
+  .room1-slaider-list {
+      flex-direction: row;
+      justify-content: end;
+      gap: 40px;
+    margin-bottom: 32px;
+    margin-right: 0;
+    margin-left: auto;
+  }
+  .room1-slaider-item {
+    border-radius: 0;
+  }
+  .room1-arrow {
+    text-align: left;
+    margin-left: 501px;
+    margin-bottom: 0;
+  }
+
+
+  .room1-wrap {
+    position: absolute;
+    left: 47px;
+    bottom: 105px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .room1 {
+    padding-top: 72px;
+  }
+  .room1 .container {
+    position: relative;
+    width: 1280px;
+    padding-left: 85px;
+    padding-right: 142px;
+  }
+
+  .room1-logo {
+    margin-bottom: 72px;
+  }
+
+  .room1-title {
+    font-size: 36px;
+    margin-bottom: 24px;
+    text-align: right;
+  }
+
+  .room1-text {
+    max-width: 400px;
+    margin-bottom: 188px;
+    margin-left: 600px;
+  }
+
+  .room1-img {
+    position: absolute;
+    top: -104px;
+    left: 180px;
+
+    max-width: 460px;
+    max-height: 574px;
+
+    border-radius: 2px;
+  }
+
+  .room1-slaider-list {
+    display: flex;
+    gap: 40px;
+    margin-left: 0;
+    margin-right: -57px;
+    margin-bottom: 40px;
+  }
+  .room1-slaider-item {
+    width: 254px;
+    height: 254px;
+    border-radius: 0;
+  }
+  .room1-arrow {
+        margin-left: 562px;
+  }
+ 
+
+  .room1-wrap {
+    position: absolute;
+    left:  85px;
+    bottom: 142px;
+  }
+}
