--- a/src/css/luxe.css
+++ b/src/css/luxe.css
@@ -114,7 +114,7 @@
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.02em;
-  color: #f3c653;
+  color: var(--second-gold-color);
   transition: background-color var(--timing-function) , border-color var(--timing-function);
 }
 .luxe-btn:last-child {
@@ -122,8 +122,8 @@
 }
 .luxe-btn:hover,
 .luxe-btn:focus {
-  background-color: #ffffff;
-  border-color: #f3c653;
+  background-color: var(--primary-white-color);
+  border-color: var(--second-gold-color);
 }
 
 @media screen and (min-width: 414px) {
@@ -190,13 +190,8 @@
     border-radius: 0;
   }
   .luxe-arrow {
-    margin-bottom: 20px;
-  }
-  .luxe-arrow-btn {
+    margin-bottom: 0;
     margin-left: 330px;
-  }
-  .luxe-arrow-btn:last-child {
-    margin-left: 0;
   }
 
   .luxe-wrap {
@@ -210,7 +205,7 @@
   .luxe {
     padding-top: 72px;
   }
-  .container {
+  .luxe .container {
     position: relative;
     width: 1280px;
     padding-left: 85px;
@@ -253,10 +248,7 @@
     border-radius: 0;
   }
   .luxe-arrow {
-    margin-bottom: 20px;
-  }
-  .luxe-arrow-btn {
-    margin-left: 457px;
+  margin-left: 457px;
   }
 
   .luxe-wrap {
