--- a/src/css/room1.css
+++ b/src/css/room1.css
@@ -78,7 +78,7 @@ text-align: left;
   margin-bottom: 20px;
 }
 .room1-slaider-item {
-    width: 194;
+  width: 194px;
   background-color: #dadada;
   box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
   border-radius: 2px;
