--- a/src/partials/room1.html
+++ b/src/partials/room1.html
@@ -28,7 +28,7 @@ Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit 
             >
             <img
         src="../img/modern-studio-apartment-design-with-bedroom-living-space.jpg"
-        alt="Фото номеру люкс"
+        alt="Фото трьохмісного номеру"
       />
         </picture>
 
