--- a/src/css/contacts.css
+++ b/src/css/contacts.css
@@ -1,11 +1,17 @@
 /* <!-- ---------Contacts--------- --> */
 
+.main-contacts {
+    padding-top: 36px;
+    padding-bottom: 32px;
+    background: #FFFDEE
+}
+
 .main-contacts-container {
     max-width: calc(384px + 30px);
-    padding: 36px 15px 32px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-left: auto;
-    margin-right: auto;
-    background: #FFFDEE
+    margin-right: auto;    
 }
 
 .main-contacts-name {
@@ -28,7 +34,7 @@
     font-size: 16px;
     line-height: 1.25;
     letter-spacing: 0.02em;
-    color: #7A7A7A;
+    color: var(--primary-text-color);
 }
 
 .main-contacts-item {
@@ -50,18 +56,19 @@
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: #C79002;
+    color: var(--first-gold-color);
 }
 
 .main-contacts-tel {
     display: inline-flex;
     padding: 9px 7px 7px;    
     align-items: center;
-    background-color: #ffffff;
-    border: 0.5px solid #F3C653;
+    background-color: var(--primary-white-color);
+    border: 0.5px solid var(--second-gold-color);
     border-radius: 2px;
     font-family: 'Montserrat', sans-serif;
-    font-style: normal;    
+    font-style: normal;   
+    font-weight: 400; 
     font-size: 14px;
     line-height: 1.21;
     letter-spacing: 0.02em;
@@ -78,7 +85,8 @@
     flex-wrap: wrap;    
     max-width: 262px;
     justify-content: center;
-    border: 0.5px solid #F3C653;
+    background-color: var(--primary-white-color);
+    border: 0.5px solid var(--second-gold-color);
     border-radius: 2px;
 }
 
@@ -100,17 +108,17 @@
 }
 
 .main-contacts-item svg {
-    margin-right: 8px;
-    fill: #C79002;
+    margin-right: 6px;
+    fill: var(--first-gold-color);
 }
 
 .main-contacts a {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color var(--timing-function);
 }
 
 .main-contacts a:hover,
 .main-contacts a:focus {
-    color: #C79002;
+    color: var(--first-gold-color);
 }
 
 .main-contacts-place {
@@ -119,11 +127,12 @@
     padding: 8px 33px 7px 10px;
     max-width: 260px;
     align-items: center;
-    background-color: #FFFFFF;
-    border: 0.5px solid #F3C653;
+    background-color: var(--primary-white-color);
+    border: 0.5px solid var(--second-gold-color);
     border-radius: 2px;
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.25;
     letter-spacing: 0.01em;
@@ -131,6 +140,8 @@
 }
 
 .main-contacts-google-map {
+    width: 100%;
+    height: 220px;
     border: 1px solid #BABABA;
     box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
     border-radius: 2px;
@@ -145,9 +156,16 @@
 
 /*----TABLET----*/
 @media screen and (min-width: 1024px) {
+    .main-contacts {
+        padding-top: 56px;
+        padding-bottom: 40px;
+    }
+
+
     .main-contacts-container {
         min-width: 1024px;
-        padding: 56px 47px 40px;
+        padding-left: 47px;
+        padding-right: 47px;
     }
 
     .main-contacts-name {
@@ -167,7 +185,7 @@
 
     .main-contacts-item {
         display: block; 
-        gap: none;
+        gap: 0;
         margin-bottom: 0;
     }
 
@@ -206,15 +224,23 @@
         height: 412px;
         position: absolute;
         right: 47px;
-        bottom: 40px;
+        bottom: 0px;
     }
 }
 
 /*----DESKTOP----*/
 @media screen and (min-width: 1280px) {
+    .main-contacts {
+        padding-top: 56px;
+        padding-bottom: 73px;
+    }
+
+
+
     .main-contacts-container {
         min-width: 1280px;
-        padding: 56px 85px 73px;
+        padding-left: 85px;
+        padding-right: 85px;
     }
 
     .main-contacts-name {
@@ -232,6 +258,6 @@
         height: 412px;
         position: absolute;
         right: 85px;
-        bottom: 74px;
+        bottom: 0;
     }
 }
