--- a/src/partials/hero3.html
+++ b/src/partials/hero3.html
@@ -2,15 +2,21 @@
 <section class="hotel-page-hero">
     <div class="container">
         <div class="center">
-            <a href="" class="location">
-                <svg class="location-icon" width="20" height="20">
-                    <use href="../img/icons.svg#location"></use>
-                </svg>Україна, м.Полтава, <br> вул. Маршала Бірюзова, 15
-            </a>
+
             <h1 class="hero-title">MIMIHO</h1>
             <h2 class="hero-sub-title">Готель</h2>
-            <button type="button" class="table-button btn">Забронювати номер</button>
-            <button type="button" class="number-button btn">Переглянути ціни</button>
+            <div class="local-div">
+                <a href="" class="location">
+                    <svg class="location-icon" width="20" height="20">
+                        <use href="../img/icons.svg#location"></use>
+                    </svg>Україна, м.Полтава, <br> вул. Маршала Бірюзова, 15
+                </a>
+                <div>
+                    <button type="button" class="table-button btn">Забронювати номер</button>
+                    <button type="button" class="number-button btn">Переглянути ціни</button>
+                </div>
+            </div>
+
         </div>
         <ul class="soc-list">
             <li class="soc-item">
