--- a/src/css/detailsrest.css
+++ b/src/css/detailsrest.css
@@ -1,1 +1,99 @@
 /* <!-- ---------Details of our restaurant--------- --> */
+
+.rest-details {
+  padding-top: 24px;
+  padding-bottom: 40px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
+    url(../img/rest_details_bg_mob_1x.jpg);
+}
+
+.rest-details > .container {
+  padding-left: 35px;
+}
+
+.rest-details-textwrap {
+  margin-left: 105px;
+  margin-bottom: 48px;
+}
+
+.rest-details-uppertext {
+  margin-bottom: 12px;
+  font-family: 'Film P3', sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.07;
+  letter-spacing: 0.3em;
+  color: var(--primary-white-color);
+}
+
+.rest-details-title {
+  margin-bottom: 20px;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--primary-white-color);
+}
+
+.rest-details-lowertext {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: #bababa;
+}
+
+.rest-details-list {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 24px;
+  margin-right: -15px;
+}
+
+.rest-details-arrows {
+  display: flex;
+  column-gap: 34px;
+  margin-bottom: 40px;
+}
+
+.white-arrows {
+  fill: var(--primary-white-color);
+  transition: fill var(--timing-function);
+}
+
+.white-arrows:hover,
+.white-arrows:focus,
+.white-arrows:active {
+  fill: var(--second-gold-color);
+}
+
+.rest-details-btnwrap {
+  margin-left: 54px;
+}
+
+.rest-details-btn {
+  display: block;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  width: 236px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.02em;
+  color: var(--second-gold-color);
+  background: rgba(0, 0, 0, 0.4);
+  border: 2px solid var(--primary-white-color);
+  border-radius: 25px;
+  transition: background-color var(--timing-function),
+    border-color var(--timing-function);
+}
+
+.rest-details-btn:first-child {
+  margin-bottom: 16px;
+}
+
+.rest-details-btn:hover,
+.rest-details-btn:focus,
+.rest-details-btn:active {
+  background-color: var(--primary-white-color);
+  border-color: var(--second-gold-color);
+}
