--- a/src/css/detailsrest.css
+++ b/src/css/detailsrest.css
@@ -5,6 +5,18 @@
   padding-bottom: 40px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
     url(../img/rest_details_bg_mob_1x.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .rest-details {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
+      url(../img/rest_details_bg_mob_2x.jpg);
+  }
 }
 
 .rest-details > .container {
@@ -66,14 +78,12 @@
   fill: var(--second-gold-color);
 }
 
-.rest-details-btnwrap {
-  margin-left: 54px;
-}
-
 .rest-details-btn {
   display: block;
   padding-top: 12px;
   padding-bottom: 12px;
+  margin-left: auto;
+  margin-right: auto;
   width: 236px;
   font-weight: 700;
   font-size: 16px;
@@ -96,4 +106,12 @@
 .rest-details-btn:active {
   background-color: var(--primary-white-color);
   border-color: var(--second-gold-color);
+}
+
+/* --------------Mobile---------------- */
+
+@media screen and (min-width: 414px) {
+  .rest-details > .container {
+    width: 414px;
+  }
 }
