--- a/src/css/detailsrest.css
+++ b/src/css/detailsrest.css
@@ -19,12 +19,8 @@
   }
 }
 
-.rest-details > .container {
-  padding-left: 35px;
-}
-
 .rest-details-textwrap {
-  margin-left: 105px;
+  margin-left: 125px;
   margin-bottom: 48px;
 }
 
@@ -57,7 +53,9 @@
 .rest-details-list {
   display: flex;
   justify-content: space-between;
+  column-gap: 15px;
   margin-bottom: 24px;
+  margin-left: 25px;
   margin-right: -15px;
 }
 
@@ -65,6 +63,7 @@
   display: flex;
   column-gap: 34px;
   margin-bottom: 40px;
+  margin-left: 25px;
 }
 
 .white-arrows {
@@ -108,10 +107,4 @@
   border-color: var(--second-gold-color);
 }
 
-/* --------------Mobile---------------- */
-
-@media screen and (min-width: 414px) {
-  .rest-details > .container {
-    width: 414px;
-  }
-}
+/* --------------Tablet---------------- */
